turns out i didnt test the responsiveness on tablets but i've fixed it

--- a/src/App.css
+++ b/src/App.css
@@ -26,7 +26,7 @@ body {
   background-color: white;
   display: flex;
   width: 100%;
-  height: 23vh;
+
   position: sticky;
   top: 0;
   z-index: 50;
@@ -39,7 +39,6 @@ body {
 .main {
   background-color: #f3f4f6;
   display: flex;
-  justify-content: center;
   align-items: center;
   padding: 2rem 1rem;
   min-height: 100vh;
